--- a/docs/sphinx/examples/python/visualization.ipynb
+++ b/docs/sphinx/examples/python/visualization.ipynb
@@ -362,6 +362,24 @@
     "height=\"250\">\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interactive Circuit Builder\n",
+    "\n",
+    "Another tool for kernel visualization is the **CUDA-Q Kernel Visualizer & Designer**. You can interactively build a circuit by dragging gates onto qubit lines, and it automatically generates the corresponding CUDA-Q kernel code.\n",
+    "\n",
+    "Try the interactive widget below (or open it in a new tab: `CUDA-Q Hello World <https://nvidia.github.io/cuda-q-academic/quick-start-to-quantum/interactive_widget/cudaq-hello-world.html>`_). From it you can load example circuits (e.g. Bell state, GHZ, Bernstein-Vazirani, Teleportation), choose execution mode (Get State, Sample, or Run), and copy the generated CUDA-Q code to use locally.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<iframe src=\"https://nvidia.github.io/cuda-q-academic/quick-start-to-quantum/interactive_widget/cudaq-hello-world.html\" width=\"100%\" height=\"1400\" style=\"border: 1px solid #444; border-radius: 8px;\" allowfullscreen></iframe>\n"
+   ]
   }
  ],
  "metadata": {
