updated PTSBE workflow and accuracy notebooks with a note on sample (use_ptsbe flag) and cudaq.ptsbe.sample APIs and added a 6-qubit complex circuit
Signed-off-by: Sachin Pisal <spisal@nvidia.com>

--- a/docs/sphinx/examples/python/ptsbe_end_to_end_workflow.ipynb
+++ b/docs/sphinx/examples/python/ptsbe_end_to_end_workflow.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -83,13 +83,14 @@
         "  - **UNIFORM**: give each trajectory the same number of shots.\n",
         "  - **LOW_WEIGHT_BIAS**: bias more shots toward low-weight (fewer errors) trajectories; optional `bias_strength` (default 2.0).\n",
         "  - **HIGH_WEIGHT_BIAS**: bias more shots toward high-weight trajectories; optional `bias_strength` (default 2.0).\n",
-        "  Example: `ShotAllocationStrategy(type=cudaq.ptsbe.ShotAllocationType.UNIFORM)` or `ShotAllocationStrategy(type=cudaq.ptsbe.ShotAllocationType.LOW_WEIGHT_BIAS, bias_strength=6.0)`.\n",
-        "- **max_trajectories**: cap the number of trajectories (useful for large shot counts)."
+        "  Example: `ShotAllocationStrategy(type=cudaq.ptsbe.ShotAllocationType.UNIFORM)` or `ShotAllocationStrategy(type=cudaq.ptsbe.ShotAllocationType.LOW_WEIGHT_BIAS, bias_strength=5.0)`.\n",
+        "- **max_trajectories**: cap the number of trajectories (useful for large shot counts).\n",
+        "- **return_execution_data** (bool): If ``True``, the result includes trace instructions and per-trajectory data (``result.ptsbe_execution_data``); see section 6 at the end."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -130,7 +131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -149,6 +150,75 @@
         "print(\"Standard (density-matrix) sample result:\")\n",
         "print(result_standard)\n",
         "print(f\"Total shots: {result_standard.get_total_shots()}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 5. Return execution data\n",
+        "\n",
+        "Pass `return_execution_data=True` to get the PTSBE execution data: the trace (gate, noise, measurement instructions) and the list of trajectories with their probabilities and shot allocations. Use `result.ptsbe_execution_data` and `result.has_execution_data()`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Execution data:\n",
+            "  Instructions: 5 total\n",
+            "    Gates: 2, Noise: 1, Measurements: 2\n",
+            "  Trajectories: 2\n",
+            "  Sum of trajectory shots: 1000000 (expected 1000000)\n",
+            "  Example trajectory: id=0, probability=0.950000, num_shots=982759\n"
+          ]
+        }
+      ],
+      "source": [
+        "result_with_data = cudaq.ptsbe.sample(\n",
+        "    bell_with_noise,\n",
+        "    noise_model=noise,\n",
+        "    shots_count=shots,\n",
+        "    sampling_strategy=strategy,\n",
+        "    return_execution_data=True,\n",
+        ")\n",
+        "assert result_with_data.has_execution_data()\n",
+        "data = result_with_data.ptsbe_execution_data\n",
+        "\n",
+        "Gate = cudaq.ptsbe.TraceInstructionType.Gate\n",
+        "Noise = cudaq.ptsbe.TraceInstructionType.Noise\n",
+        "Measurement = cudaq.ptsbe.TraceInstructionType.Measurement\n",
+        "print(\"Execution data:\")\n",
+        "print(f\"  Instructions: {len(data.instructions)} total\")\n",
+        "n_gate = sum(1 for i in data.instructions if i.type == Gate)\n",
+        "n_noise = sum(1 for i in data.instructions if i.type == Noise)\n",
+        "n_meas = sum(1 for i in data.instructions if i.type == Measurement)\n",
+        "print(f\"    Gates: {n_gate}, Noise: {n_noise}, Measurements: {n_meas}\")\n",
+        "print(f\"  Trajectories: {len(data.trajectories)}\")\n",
+        "total_traj_shots = sum(t.num_shots for t in data.trajectories)\n",
+        "print(f\"  Sum of trajectory shots: {total_traj_shots} (expected {shots})\")\n",
+        "if data.trajectories:\n",
+        "    t0 = data.trajectories[0]\n",
+        "    print(f\"  Example trajectory: id={t0.trajectory_id}, probability={t0.probability:.6f}, num_shots={t0.num_shots}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 6. Two API options:\n",
+        "\n",
+        "We have two ways to sample from a noisy circuit:\n",
+        "\n",
+        "1. **`cudaq.sample(kernel, noise_model=noise, use_ptsbe=..., ...)`** — The main sample API with a **`use_ptsbe`** option. When `use_ptsbe=False` (or omitted), sampling uses the standard density-matrix path; when `use_ptsbe=True`, sampling uses the PTSBE (trajectory) path.\n",
+        "2. **`cudaq.ptsbe.sample(kernel, noise_model=noise, ...)`** — The dedicated PTSBE API. There is no `use_ptsbe` option; sampling always uses the PTSBE path (trajectories, strategies, execution data, etc.).\n",
+        "\n",
+        "**When to choose which:** Use **`cudaq.sample`** with `use_ptsbe=True` when you want PTSBE from the main sample API (one call, one place for all sampling). Use **`cudaq.ptsbe.sample`** when you want the dedicated PTSBE API (explicit PTSBE entry point, no flag). Both provide the same PTSBE path (large shot counts, batching, trajectory strategies, execution data)."
       ]
     }
   ],
