--- a/docs/sphinx/examples/python/ptsbe_accuracy_validation.ipynb
+++ b/docs/sphinx/examples/python/ptsbe_accuracy_validation.ipynb
@@ -38,7 +38,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Use a minimal circuit: **single X gate** then measure. With **depol(0.1)** on X we get one noise site. We use **ProbabilisticSamplingStrategy** (with a seed for reproducibility), which samples trajectories according to their probabilities. **shots=1024** to check alignment."
+        "Use a **6-qubit circuit** with three layers of Hadamards and controlled-X gates so there are many noise sites and a spread of measurement outcomes. Depolarization noise on several H and X gates makes the distribution non-trivial. We use **ProbabilisticSamplingStrategy** (with a seed for reproducibility). A moderate number of **shots** (e.g. 50k–1M) gives a meaningful fidelity check across many bitstrings."
       ]
     },
     {
@@ -49,12 +49,42 @@
       "source": [
         "@cudaq.kernel\n",
         "def circuit():\n",
-        "    q = cudaq.qvector(1)\n",
-        "    x(q[0])\n",
-        "    mz(q[0])\n",
+        "    n = 6\n",
+        "    q = cudaq.qvector(n)\n",
+        "    # Layer 0: Hadamards and entangling\n",
+        "    h(q[0])\n",
+        "    h(q[2])\n",
+        "    h(q[4])\n",
+        "    x.ctrl(q[0], q[1])\n",
+        "    x.ctrl(q[2], q[3])\n",
+        "    x.ctrl(q[4], q[5])\n",
+        "    x.ctrl(q[1], q[2])\n",
+        "    x.ctrl(q[3], q[4])\n",
+        "    # Layer 1: more H and CX\n",
+        "    h(q[0])\n",
+        "    h(q[3])\n",
+        "    x.ctrl(q[0], q[3])\n",
+        "    x.ctrl(q[2], q[5])\n",
+        "    x.ctrl(q[1], q[4])\n",
+        "    x.ctrl(q[3], q[5])\n",
+        "    # Layer 2: final mix\n",
+        "    h(q[1])\n",
+        "    h(q[4])\n",
+        "    x.ctrl(q[0], q[2])\n",
+        "    x.ctrl(q[1], q[5])\n",
+        "    x.ctrl(q[2], q[4])\n",
+        "    mz(q)\n",
         "\n",
         "noise = cudaq.NoiseModel()\n",
-        "noise.add_channel(\"x\", [0], cudaq.DepolarizationChannel(0.1))"
+        "noise.add_channel(\"h\", [0], cudaq.DepolarizationChannel(0.04))\n",
+        "noise.add_channel(\"h\", [1], cudaq.DepolarizationChannel(0.04))\n",
+        "noise.add_channel(\"h\", [2], cudaq.DepolarizationChannel(0.04))\n",
+        "noise.add_channel(\"h\", [3], cudaq.DepolarizationChannel(0.04))\n",
+        "noise.add_channel(\"h\", [4], cudaq.DepolarizationChannel(0.04))\n",
+        "noise.add_channel(\"h\", [5], cudaq.DepolarizationChannel(0.04))\n",
+        "noise.add_channel(\"x\", [0], cudaq.DepolarizationChannel(0.03))\n",
+        "noise.add_channel(\"x\", [2], cudaq.DepolarizationChannel(0.03))\n",
+        "noise.add_channel(\"x\", [4], cudaq.DepolarizationChannel(0.03))"
       ]
     },
     {
@@ -92,7 +122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -101,11 +131,11 @@
           "text": [
             "PTSBE accuracy validation (standard sample vs PTSBE sample)\n",
             "  Strategy: ProbabilisticSamplingStrategy(seed=42)\n",
-            "  Circuit: single X gate; depol(0.1) on X\n",
+            "  Circuit: 6 qubits, 3 layers H/CX; depol on h[0..5], x[0], x[2], x[4]\n",
             "  Shots:   1000000\n",
-            "  Hellinger fidelity F:  0.999991\n",
-            "  Hellinger distance H:  0.002930\n",
-            "  Result: F >= 0.95 — PTSBE aligns well with standard sampling.\n"
+            "  Hellinger fidelity F:  0.999984\n",
+            "  Hellinger distance H:  0.004053\n",
+            "  Result: F >= 0.99 — PTSBE aligns well with standard sampling.\n"
           ]
         }
       ],
@@ -132,11 +162,11 @@
         "\n",
         "print(\"PTSBE accuracy validation (standard sample vs PTSBE sample)\")\n",
         "print(\"  Strategy: ProbabilisticSamplingStrategy(seed=42)\")\n",
-        "print(\"  Circuit: single X gate; depol(0.1) on X\")\n",
+        "print(\"  Circuit: 6 qubits, 3 layers H/CX; depol on h[0..5], x[0], x[2], x[4]\")\n",
         "print(f\"  Shots:   {shots}\")\n",
         "print(f\"  Hellinger fidelity F:  {fidelity:.6f}\")\n",
         "print(f\"  Hellinger distance H:  {hellinger_dist:.6f}\")\n",
-        "min_fidelity = 0.95\n",
+        "min_fidelity = 0.99\n",
         "if fidelity >= min_fidelity:\n",
         "    print(f\"  Result: F >= {min_fidelity} — PTSBE aligns well with standard sampling.\")\n",
         "else:\n",
