adding trajectory instruction and selected trajectory
Signed-off-by: Sachin Pisal <spisal@nvidia.com>

--- a/docs/sphinx/examples/python/ptsbe_end_to_end_workflow.ipynb
+++ b/docs/sphinx/examples/python/ptsbe_end_to_end_workflow.ipynb
@@ -175,7 +175,15 @@
             "    Gates: 2, Noise: 1, Measurements: 2\n",
             "  Trajectories: 2\n",
             "  Sum of trajectory shots: 1000000 (expected 1000000)\n",
-            "  Example trajectory: id=0, probability=0.950000, num_shots=982759\n"
+            "  Trace instructions (first 5):\n",
+            "    [0] type=TraceInstructionType.Gate, name=h, targets=[0]\n",
+            "    [1] type=TraceInstructionType.Noise, name=depolarization_channel, targets=[0]\n",
+            "    [2] type=TraceInstructionType.Gate, name=x, targets=[1]\n",
+            "    [3] type=TraceInstructionType.Measurement, name=mz, targets=[0]\n",
+            "    [4] type=TraceInstructionType.Measurement, name=mz, targets=[1]\n",
+            "  Example trajectory: id=0, probability=0.950000, num_shots=982759\n",
+            "  Selected trajectory (kraus_selections):\n",
+            "    circuit_location=0, kraus_operator_index=0\n"
           ]
         }
       ],
@@ -202,9 +210,15 @@
         "print(f\"  Trajectories: {len(data.trajectories)}\")\n",
         "total_traj_shots = sum(t.num_shots for t in data.trajectories)\n",
         "print(f\"  Sum of trajectory shots: {total_traj_shots} (expected {shots})\")\n",
+        "print(\"  Trace instructions (first 5):\")\n",
+        "for i, inst in enumerate(data.instructions[:5]):\n",
+        "    print(f\"    [{i}] type={inst.type}, name={inst.name}, targets={list(inst.targets)}\")\n",
         "if data.trajectories:\n",
         "    t0 = data.trajectories[0]\n",
-        "    print(f\"  Example trajectory: id={t0.trajectory_id}, probability={t0.probability:.6f}, num_shots={t0.num_shots}\")"
+        "    print(f\"  Example trajectory: id={t0.trajectory_id}, probability={t0.probability:.6f}, num_shots={t0.num_shots}\")\n",
+        "    print(\"  Selected trajectory (kraus_selections):\")\n",
+        "    for sel in t0.kraus_selections:\n",
+        "        print(f\"    circuit_location={sel.circuit_location}, kraus_operator_index={sel.kraus_operator_index}\")"
       ]
     },
     {
