using depol2 for cnot
Signed-off-by: Sachin Pisal <spisal@nvidia.com>

--- a/docs/sphinx/examples/python/ptsbe_accuracy_validation.ipynb
+++ b/docs/sphinx/examples/python/ptsbe_accuracy_validation.ipynb
@@ -38,7 +38,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Use a **6-qubit circuit** with three layers of Hadamards and controlled-X gates so there are many noise sites and a spread of measurement outcomes. Depolarization noise on several H and X gates makes the distribution non-trivial. We use **ProbabilisticSamplingStrategy** (with a seed for reproducibility). A moderate number of **shots** (e.g. 50k–1M) gives a meaningful fidelity check across many bitstrings."
+        "Use a **6-qubit circuit** with three layers of Hadamards and controlled-X (CNOT) gates. For **single-qubit** gates (H) we use **DepolarizationChannel** with a single qubit in the operand list. For **CNOTs** we pass **qubit pairs** to the noise model and use **Depolarization2** (two-qubit depolarization). We use **ProbabilisticSamplingStrategy** (with a seed for reproducibility). A moderate number of **shots** (e.g. 50k–1M) gives a meaningful fidelity check across many bitstrings."
       ]
     },
     {
@@ -82,9 +82,18 @@
         "noise.add_channel(\"h\", [3], cudaq.DepolarizationChannel(0.04))\n",
         "noise.add_channel(\"h\", [4], cudaq.DepolarizationChannel(0.04))\n",
         "noise.add_channel(\"h\", [5], cudaq.DepolarizationChannel(0.04))\n",
-        "noise.add_channel(\"x\", [0], cudaq.DepolarizationChannel(0.03))\n",
-        "noise.add_channel(\"x\", [2], cudaq.DepolarizationChannel(0.03))\n",
-        "noise.add_channel(\"x\", [4], cudaq.DepolarizationChannel(0.03))"
+        "noise.add_channel(\"x\", [0, 1], cudaq.Depolarization2(0.03))\n",
+        "noise.add_channel(\"x\", [2, 3], cudaq.Depolarization2(0.03))\n",
+        "noise.add_channel(\"x\", [4, 5], cudaq.Depolarization2(0.03))\n",
+        "noise.add_channel(\"x\", [1, 2], cudaq.Depolarization2(0.03))\n",
+        "noise.add_channel(\"x\", [3, 4], cudaq.Depolarization2(0.03))\n",
+        "noise.add_channel(\"x\", [0, 3], cudaq.Depolarization2(0.03))\n",
+        "noise.add_channel(\"x\", [2, 5], cudaq.Depolarization2(0.03))\n",
+        "noise.add_channel(\"x\", [1, 4], cudaq.Depolarization2(0.03))\n",
+        "noise.add_channel(\"x\", [3, 5], cudaq.Depolarization2(0.03))\n",
+        "noise.add_channel(\"x\", [0, 2], cudaq.Depolarization2(0.03))\n",
+        "noise.add_channel(\"x\", [1, 5], cudaq.Depolarization2(0.03))\n",
+        "noise.add_channel(\"x\", [2, 4], cudaq.Depolarization2(0.03))"
       ]
     },
     {
@@ -131,10 +140,10 @@
           "text": [
             "PTSBE accuracy validation (standard sample vs PTSBE sample)\n",
             "  Strategy: ProbabilisticSamplingStrategy(seed=42)\n",
-            "  Circuit: 6 qubits, 3 layers H/CX; depol on h[0..5], x[0], x[2], x[4]\n",
+            "  Circuit: 6 qubits, 3 layers H/CX; DepolarizationChannel on h[0..5], Depolarization2 on CNOT pairs\n",
             "  Shots:   1000000\n",
-            "  Hellinger fidelity F:  0.999984\n",
-            "  Hellinger distance H:  0.004053\n",
+            "  Hellinger fidelity F:  0.999969\n",
+            "  Hellinger distance H:  0.005570\n",
             "  Result: F >= 0.99 — PTSBE aligns well with standard sampling.\n"
           ]
         }
@@ -162,7 +171,7 @@
         "\n",
         "print(\"PTSBE accuracy validation (standard sample vs PTSBE sample)\")\n",
         "print(\"  Strategy: ProbabilisticSamplingStrategy(seed=42)\")\n",
-        "print(\"  Circuit: 6 qubits, 3 layers H/CX; depol on h[0..5], x[0], x[2], x[4]\")\n",
+        "print(\"  Circuit: 6 qubits, 3 layers H/CX; DepolarizationChannel on h[0..5], Depolarization2 on CNOT pairs\")\n",
         "print(f\"  Shots:   {shots}\")\n",
         "print(f\"  Hellinger fidelity F:  {fidelity:.6f}\")\n",
         "print(f\"  Hellinger distance H:  {hellinger_dist:.6f}\")\n",
