--- a/docs/sphinx/examples/python/ptsbe_end_to_end_workflow.ipynb
+++ b/docs/sphinx/examples/python/ptsbe_end_to_end_workflow.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -45,12 +45,12 @@
       "source": [
         "### 2. Define the circuit and noise model\n",
         "\n",
-        "Define a kernel and attach a noise model. Each gate you add to the noise model becomes a **noise site** when that gate appears in the circuit. Here we use a small Bell-style circuit with depolarization on the Hadamard and on the controlled-X."
+        "Define a kernel and attach a noise model. Each gate you add to the noise model becomes a **noise site** when that gate appears in the circuit. For **single-qubit** gates (e.g. H) use **DepolarizationChannel** with one qubit; for **CNOTs** pass the **qubit pair** `[control, target]` and use **Depolarization2** (two-qubit depolarization). Here we use a small Bell-style circuit with depol on the Hadamard and on the controlled-X (qubit pair [0, 1])."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -63,7 +63,7 @@
         "\n",
         "noise = cudaq.NoiseModel()\n",
         "noise.add_channel(\"h\", [0], cudaq.DepolarizationChannel(0.05))\n",
-        "noise.add_channel(\"x\", [0], cudaq.DepolarizationChannel(0.03))"
+        "noise.add_channel(\"x\", [0, 1], cudaq.Depolarization2(0.03))"
       ]
     },
     {
@@ -90,20 +90,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "PTSBE sample result:\n",
-            "{ 00:499857 11:500143 }\n",
-            "\n",
-            "Total shots: 1000000\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "shots = 1000000\n",
         "\n",
@@ -131,20 +120,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Standard (density-matrix) sample result:\n",
-            "{ 00:499866 11:500134 }\n",
-            "\n",
-            "Total shots: 1000000\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "result_standard = cudaq.sample(bell_with_noise, noise_model=noise, shots_count=shots)\n",
         "print(\"Standard (density-matrix) sample result:\")\n",
@@ -163,30 +141,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Execution data:\n",
-            "  Instructions: 5 total\n",
-            "    Gates: 2, Noise: 1, Measurements: 2\n",
-            "  Trajectories: 2\n",
-            "  Sum of trajectory shots: 1000000 (expected 1000000)\n",
-            "  Trace instructions (first 5):\n",
-            "    [0] type=TraceInstructionType.Gate, name=h, targets=[0]\n",
-            "    [1] type=TraceInstructionType.Noise, name=depolarization_channel, targets=[0]\n",
-            "    [2] type=TraceInstructionType.Gate, name=x, targets=[1]\n",
-            "    [3] type=TraceInstructionType.Measurement, name=mz, targets=[0]\n",
-            "    [4] type=TraceInstructionType.Measurement, name=mz, targets=[1]\n",
-            "  Example trajectory: id=0, probability=0.950000, num_shots=982759\n",
-            "  Selected trajectory (kraus_selections):\n",
-            "    circuit_location=0, kraus_operator_index=0\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "result_with_data = cudaq.ptsbe.sample(\n",
         "    bell_with_noise,\n",
