Combine state view and state again
Signed-off-by: Thien Nguyen <thiennguyen@nvidia.com>

--- a/docs/sphinx/applications/python/mps_encoding.ipynb
+++ b/docs/sphinx/applications/python/mps_encoding.ipynb
@@ -424,7 +424,7 @@
     "\n",
     "# Sanity check\n",
     "print(np.dot(\n",
-    "    np.array(cudaq.StateMemoryView(cudaq.get_state(qc))).conj().T, statevector\n",
+    "    np.array(cudaq.get_state(qc)).conj().T, statevector\n",
     "))"
    ]
   },
@@ -451,7 +451,7 @@
     "\n",
     "# Sanity check\n",
     "print(np.dot(\n",
-    "    np.array(cudaq.StateMemoryView(cudaq.get_state(qc))).conj().T, statevector\n",
+    "    np.array(cudaq.get_state(qc)).conj().T, statevector\n",
     "))"
    ]
   }
