--- a/docs/sphinx/applications/python/quantum_fourier_transform.ipynb
+++ b/docs/sphinx/applications/python/quantum_fourier_transform.ipynb
@@ -195,7 +195,7 @@
     "print(cudaq.draw(quantum_fourier_transform, input_state))\n",
     "\n",
     "# Print the statevector to the specified precision\n",
-    "statevector = np.array(cudaq.StateMemoryView(cudaq.get_state(quantum_fourier_transform, input_state)))\n",
+    "statevector = np.array(cudaq.get_state(quantum_fourier_transform, input_state))\n",
     "print(np.round(statevector, precision))"
    ]
   },
@@ -318,7 +318,7 @@
     "print(cudaq.draw(verification_example, input_state))\n",
     "\n",
     "# Print the statevector to the specified precision\n",
-    "statevector = np.array(cudaq.StateMemoryView(cudaq.get_state(verification_example, input_state)))\n",
+    "statevector = np.array(cudaq.get_state(verification_example, input_state))\n",
     "print(np.round(statevector, precision))  # The result should be the input state"
    ]
   },
