--- a/docs/sphinx/applications/python/quantum_teleportation.ipynb
+++ b/docs/sphinx/applications/python/quantum_teleportation.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "\n",
     "# Let us save the statevector of the circuit so far for later use.\n",
-    "psi_0 = cudaq.StateMemoryView(cudaq.get_state(teleportation))"
+    "psi_0 = cudaq.get_state(teleportation)"
    ]
   },
   {
@@ -106,7 +106,7 @@
     "        x(qubits[2])\n",
     "\n",
     "\n",
-    "psi_4 = cudaq.StateMemoryView(cudaq.get_state(teleportation))"
+    "psi_4 = cudaq.get_state(teleportation)"
    ]
   },
   {
