--- a/docs/sphinx/applications/python/quantum_volume.ipynb
+++ b/docs/sphinx/applications/python/quantum_volume.ipynb
@@ -177,7 +177,7 @@
     "    else:\n",
     "        cudaq.set_target('qpp-cpu')\n",
     "    clean_result = np.array(\n",
-    "        cudaq.StateMemoryView(cudaq.get_state(qv, n, circuit_params, layer_permutations)))\n",
+    "        cudaq.get_state(qv, n, circuit_params, layer_permutations))\n",
     "\n",
     "    # Performs noisy sampling\n",
     "    cudaq.set_target(\"density-matrix-cpu\")\n",
