--- a/docs/sphinx/examples/python/executing_kernels.ipynb
+++ b/docs/sphinx/examples/python/executing_kernels.ipynb
@@ -431,7 +431,7 @@
    ],
    "source": [
     "# Compute the statevector of the kernel\n",
-    "result = cudaq.StateMemoryView(cudaq.get_state(kernel, qubit_count))\n",
+    "result = cudaq.get_state(kernel, qubit_count)\n",
     "\n",
     "print(np.array(result))"
    ]
