--- a/docs/sphinx/applications/python/entanglement_acc_hamiltonian_simulation.ipynb
+++ b/docs/sphinx/applications/python/entanglement_acc_hamiltonian_simulation.ipynb
@@ -415,7 +415,7 @@
     "    \n",
     "    for step in range(1, r + 1):\n",
     "        psi_ideal = ideal_next_state(U, psi_ideal)\n",
-    "        t_state = cudaq.StateMemoryView(cudaq.get_state(trotter_step_pf1, t_state, dt, c_a, c_b, words_a, words_b))\n",
+    "        t_state = cudaq.get_state(trotter_step_pf1, t_state, dt, c_a, c_b, words_a, words_b)\n",
     "        \n",
     "        psi_t = cp.asarray(t_state, dtype=cp.complex128) \n",
     "\n",
@@ -464,7 +464,7 @@
     "r = 100  # number of PF1 Trotter steps\n",
     "\n",
     "# initial state \n",
-    "initial_state = cudaq.StateMemoryView(cudaq.get_state(get_initial_state, n))\n",
+    "initial_state = cudaq.get_state(get_initial_state, n)\n",
     "\n",
     "# field strength and coupling strength \n",
     "h_x_val, h_y_val, J_val = 0.8090, 0.9045, 1\n",
