upgrading openfermion to 1.7.1
Signed-off-by: Sachin Pisal <spisal@nvidia.com>

--- a/docs/sphinx/applications/python/vqe_advanced.ipynb
+++ b/docs/sphinx/applications/python/vqe_advanced.ipynb
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "# Install the relevant packages.\n",
-    "!pip install pyscf>=2.7 openfermionpyscf==0.5 matplotlib==3.8.4 openfermion==1.6.1 -q"
+    "!pip install pyscf>=2.7 openfermionpyscf==0.5 matplotlib==3.8.4 openfermion==1.7.1 -q"
    ]
   },
   {
@@ -79,11 +79,7 @@
     "import cudaq\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.optimize import minimize\n",
-    "import numpy as np\n",
-    "\n",
-    "# NumPy 2.0 compatibility: openfermion uses np.string_ which was removed\n",
-    "if not hasattr(np, 'string_'):\n",
-    "    np.string_ = np.bytes_"
+    "import numpy as np"
    ]
   },
   {
