--- a/docs/sphinx/examples/python/ptsbe_accuracy_verification.ipynb
+++ b/docs/sphinx/examples/python/ptsbe_accuracy_verification.ipynb
@@ -67,17 +67,41 @@
       "execution_count": 1,
       "id": "cell-2",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "cudaq loaded from: /home/talexander/Devel/cudaq-pstbe/vendor/cuda-quantum/build/python/cudaq\n",
+            "PTSBE target: nvidia\n"
+          ]
+        }
+      ],
       "source": [
-        "import os\n",
+        "import os, sys\n",
         "os.environ[\"OMP_NUM_THREADS\"] = str(os.cpu_count())\n",
+        "\n",
+        "# TODO: Remove this sys.path override before pushing the PR.\n",
+        "sys.path.insert(0, os.path.expanduser(\n",
+        "    \"~/Devel/cudaq-pstbe/vendor/cuda-quantum/build/python\"))\n",
         "\n",
         "import cudaq\n",
         "import numpy as np\n",
         "import time\n",
         "\n",
-        "cudaq.set_target(\"density-matrix-cpu\")\n",
-        "cudaq.set_random_seed(42)"
+        "print(f\"cudaq loaded from: {cudaq.__path__[0]}\")\n",
+        "assert hasattr(cudaq, \"ptsbe\"), \"cudaq.ptsbe not found -- is the build current?\"\n",
+        "\n",
+        "DM_TARGET = \"density-matrix-cpu\"\n",
+        "try:\n",
+        "    cudaq.set_target(\"nvidia\")\n",
+        "    PTSBE_TARGET = \"nvidia\"\n",
+        "except Exception:\n",
+        "    PTSBE_TARGET = \"qpp-cpu\"\n",
+        "\n",
+        "cudaq.set_target(DM_TARGET)\n",
+        "cudaq.set_random_seed(42)\n",
+        "print(f\"PTSBE target: {PTSBE_TARGET}\")"
       ]
     },
     {
@@ -148,7 +172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 3,
       "id": "cell-6",
       "metadata": {},
       "outputs": [
@@ -158,7 +182,7 @@
           "text": [
             "Same circuit with Pauli noise (p1=0.001, p2=0.01, p_meas=0.01):\n",
             "  8 unique bitstrings from 1000 shots\n",
-            "{ 000:122 001:28 010:80 011:3 100:47 101:239 110:65 111:416 }\n",
+            "{ 000:111 001:11 010:87 011:13 100:39 101:245 110:56 111:438 }\n",
             "\n"
           ]
         }
@@ -189,12 +213,14 @@
       "id": "25ee9d8b",
       "metadata": {},
       "source": [
-        "**Step 1: DM reference.** We build both kernel variants (with and without measurement) from the same angles up front, ensuring both simulators run the exact same circuit. `get_dm_diagonal` takes the measurement-free kernel, runs it on `density-matrix-cpu` with noise, and extracts the diagonal $p_{\\text{DM}}(x) = \\langle x|\\rho|x\\rangle$."
+        "#### Density matrix reference\n",
+        "\n",
+        "We build both kernel variants (with and without measurement) from the same angles up front, ensuring both simulators run the exact same circuit. `get_dm_diagonal` takes the measurement-free kernel, runs it on `density-matrix-cpu` with noise, and extracts the diagonal $p_{\\text{DM}}(x) = \\langle x|\\rho|x\\rangle$."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 4,
       "id": "68445659",
       "metadata": {},
       "outputs": [
@@ -207,17 +233,18 @@
             "Z = sum p_DM(x)^2 = 7.216395e-03\n",
             "Uniform baseline 1/D = 3.906250e-03\n",
             "Z - 1/D = 3.310145e-03\n",
-            "Top 5 probabilities: [0.0265998062758281, 0.019600520826974492, 0.019084811620052343, 0.017601808750226464, 0.01651198645024806]\n"
+            "Top 5 probabilities: [0.02659980627582806, 0.0196005208269745, 0.019084811620052333, 0.01760180875022647, 0.016511986450248047]\n"
           ]
         }
       ],
       "source": [
         "def get_dm_diagonal(kernel, noise_model):\n",
         "    \"\"\"Run DM simulation with noise and return the diagonal probabilities.\"\"\"\n",
+        "    cudaq.set_target(DM_TARGET)\n",
         "    cudaq.set_noise(noise_model)\n",
         "    state = cudaq.get_state(kernel)\n",
         "    cudaq.unset_noise()\n",
-        "    dm = np.array(cudaq.StateMemoryView(state))\n",
+        "    dm = np.array(state)\n",
         "    return np.real(np.diag(dm))\n",
         "\n",
         "\n",
@@ -245,7 +272,9 @@
       "id": "e402718a",
       "metadata": {},
       "source": [
-        "**Step 2: PTSBE sampling.** `run_ptsbe` takes the pre-built measurement kernel, creates a probabilistic sampling strategy, and calls `cudaq.ptsbe.sample()` to produce $N$ bitstring samples."
+        "#### PTSBE sampling\n",
+        "\n",
+        "`run_ptsbe` takes the pre-built measurement kernel, creates a probabilistic sampling strategy, and calls `cudaq.ptsbe.sample()` to produce $N$ bitstring samples."
       ]
     },
     {
@@ -253,10 +282,19 @@
       "execution_count": null,
       "id": "b045b954",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "PTSBE sampling: 100000 shots, 256 unique bitstrings\n"
+          ]
+        }
+      ],
       "source": [
         "def run_ptsbe(kernel, noise_model, shots, max_traj=1000, seed=42):\n",
         "    \"\"\"Run PTSBE sampling and return the result.\"\"\"\n",
+        "    cudaq.set_target(PTSBE_TARGET)\n",
         "    strategy = cudaq.ptsbe.ProbabilisticSamplingStrategy(seed=seed)\n",
         "    return cudaq.ptsbe.sample(\n",
         "        kernel, noise_model=noise_model, shots_count=shots,\n",
@@ -266,7 +304,19 @@
         "\n",
         "N = 100_000\n",
         "result = run_ptsbe(kernel_mz, noise_model, shots=N)\n",
-        "print(f\"PTSBE sampling: {N} shots, {len(result)} unique bitstrings\")"
+        "top5 = sorted(result.items(), key=lambda kv: kv[1], reverse=True)[:5]\n",
+        "print(f\"PTSBE sampling: {N} shots, {len(result)} unique bitstrings\")\n",
+        "print(f\"Top 5 bitstrings: {[(bs, c) for bs, c in top5]}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "ed6ff3ed",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "cudaq.ptsbe.sample"
       ]
     },
     {
@@ -274,15 +324,28 @@
       "id": "62c2e74c",
       "metadata": {},
       "source": [
-        "**Step 3: Score.** `compute_f_noisy` looks up $p_{\\text{DM}}(x_i)$ for each sampled bitstring, computes the mean $\\hat{m}_U$, and returns $F_{\\text{noisy}} = (\\hat{m}_U - 1/D) / (Z - 1/D)$."
+        "#### Scoring\n",
+        "\n",
+        "`compute_f_noisy` looks up $p_{\\text{DM}}(x_i)$ for each sampled bitstring, computes the mean $\\hat{m}_U$, and returns $F_{\\text{noisy}} = (\\hat{m}_U - 1/D) / (Z - 1/D)$."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "3f359a3c",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "PTSBE results (N=100000 shots):\n",
+            "  E_PTSBE = 3.820000e-03\n",
+            "  F_noisy = -0.0261\n",
+            "  Pass (F_noisy >= 0.95): FAIL\n"
+          ]
+        }
+      ],
       "source": [
         "def compute_f_noisy(p_dm, result, n):\n",
         "    \"\"\"Compute noisy-reference XEB fidelity F_noisy.\"\"\"\n",
@@ -546,6 +609,7 @@
         "print(f\"Performance comparison (n={n}, depth={depth})\")\n",
         "print(f\"{'Shots':>10s}  {'DM (s)':>10s}  {'PTSBE (s)':>10s}  {'Speedup':>8s}\")\n",
         "for N in shot_counts:\n",
+        "    cudaq.set_target(DM_TARGET)\n",
         "    t0 = time.perf_counter()\n",
         "    cudaq.sample(kernel_mz, noise_model=noise_model, shots_count=N)\n",
         "    t_dm = time.perf_counter() - t0\n",
