--- a/docs/sphinx/examples/python/ptsbe_accuracy_verification.ipynb
+++ b/docs/sphinx/examples/python/ptsbe_accuracy_verification.ipynb
@@ -620,7 +620,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "cell-14",
       "metadata": {},
       "outputs": [
@@ -680,10 +680,10 @@
         "\n",
         "if _selected_shots is None:\n",
         "    _selected_shots = SHOTS_MAX_CAP\n",
-        "    print(f\"\\n  ** No sweep point with ptsbe std < {SHOTS_STD_THRESHOLD}.\")\n",
-        "    print(f\"  -> Capping N_SHOTS = {_selected_shots:,}\")\n",
+        "    print(f\"\\nNo sweep point with ptsbe std < {SHOTS_STD_THRESHOLD}.\")\n",
+        "    print(f\"  Capping N_SHOTS = {_selected_shots:,}\")\n",
         "else:\n",
-        "    print(f\"\\n  -> Selected N_SHOTS = {_selected_shots:,}\"\n",
+        "    print(f\"\\nSelected N_SHOTS = {_selected_shots:,}\"\n",
         "          f\"  (first with ptsbe std < {SHOTS_STD_THRESHOLD})\")"
       ]
     },
@@ -779,7 +779,11 @@
           "output_type": "stream",
           "text": [
             "n= 4, depth= 2:  standard=0.9988+/-0.0012,  ptsbe=1.0030+/-0.0012\n",
-            "n= 4, depth= 4:  standard=0.9998+/-0.0018,  ptsbe=1.0108+/-0.0031\n"
+            "n= 4, depth= 4:  standard=0.9998+/-0.0018,  ptsbe=1.0108+/-0.0031\n",
+            "n= 4, depth= 8:  standard=1.0018+/-0.0023,  ptsbe=1.0389+/-0.0034\n",
+            "n= 6, depth= 2:  standard=0.9999+/-0.0014,  ptsbe=1.0095+/-0.0008\n",
+            "n= 6, depth= 4:  standard=0.9997+/-0.0028,  ptsbe=1.0270+/-0.0022\n",
+            "n= 6, depth= 8:  standard=0.9994+/-0.0014,  ptsbe=1.0948+/-0.0044\n"
           ]
         }
       ],
