--- a/docs/sphinx/examples/python/ptsbe_accuracy_verification.ipynb
+++ b/docs/sphinx/examples/python/ptsbe_accuracy_verification.ipynb
@@ -438,7 +438,7 @@
       "source": [
         "#### Scoring\n",
         "\n",
-        "`compute_f_noisy` looks up $p_{\\text{DM}}(x_i)$ for each sampled bitstring, computes the mean $\\hat{m}_U$, and returns $F_{\\text{noisy}} = (\\hat{m}_U - 1/D) / (Z - 1/D)$. We score both `standard` (cusvsim trajectory simulation) and `ptsbe` side-by-side. `standard` should produce $F_{\\text{noisy}} \\approx 1.0$; PTSBE may show values slightly above 1.0 due to trajectory truncation bias (see below)."
+        "`compute_f_noisy` looks up $p_{\\text{DM}}(x_i)$ for each sampled bitstring, computes the mean $\\hat{m}_U$, and returns $F_{\\text{noisy}} = (\\hat{m}_U - 1/D) / (Z - 1/D)$. We score both `standard` (cusvsim trajectory simulation) and `ptsbe` side-by-side. `standard` should produce $F_{\\text{noisy}} \\approx 1.0$; PTSBE may show values slightly above 1.0 due to trajectory truncation bias (see **Trajectory convergence** in the calibration section)."
       ]
     },
     {
@@ -503,7 +503,9 @@
       "source": [
         "### Trajectory convergence\n",
         "\n",
-        "$F_{\\text{noisy}}$ vs `max_trajectories` for a fixed circuit and fixed total shots. As the trajectory budget increases, PTSBE captures more of the total probability mass and $F_{\\text{noisy}}$ converges toward the standard sampler's baseline ($\\approx 1.0$). This characterizes how many trajectories are needed for a given accuracy target."
+        "$F_{\\text{noisy}}$ vs `max_trajectories` for a fixed circuit and fixed total shots. As the trajectory budget increases, PTSBE captures more of the total probability mass $P_S = \\sum_{k \\in S} p_k$ and $F_{\\text{noisy}}$ converges toward the standard sampler's baseline ($\\approx 1.0$). When $P_S < 1$, the selected (predominantly low-error) trajectories receive more weight than they should, making the output distribution artificially sharp and driving $F_{\\text{noisy}} > 1$.\n",
+        "\n",
+        "The table below reports `n_traj` (unique trajectories actually generated), `P_captured` ($P_S$), and `F_noisy` for each trajectory budget. This characterizes how many trajectories are needed for a given accuracy target."
       ]
     },
     {
@@ -554,14 +556,27 @@
         "f_std, _, _ = compute_f_noisy(p_dm, result_std, n)\n",
         "\n",
         "traj_f = []\n",
-        "print(f\"Trajectory convergence (n={n}, depth={depth}, N={N})\")\n",
-        "print(f\"  {'standard':>20s}: F_noisy = {f_std:.4f}\")\n",
+        "traj_n = []\n",
+        "traj_pcap = []\n",
+        "print(f\"Trajectory convergence (n={n}, depth={depth}, N={N:,})\\n\")\n",
+        "print(f\"  {'standard':>20s}: F_noisy = {f_std:.4f}\\n\")\n",
+        "print(f\"{'max_traj':>10s}  {'n_traj':>8s}  {'P_captured':>10s}  {'F_noisy':>8s}\")\n",
         "for mt in traj_counts:\n",
-        "    result = run_noisy_sample(kernel_mz, noise_model,\n",
-        "                              shots=N, max_traj=mt, method=\"ptsbe\")\n",
+        "    cudaq.set_target(PTSBE_TARGET)\n",
+        "    strategy = cudaq.ptsbe.ProbabilisticSamplingStrategy(seed=42)\n",
+        "    result = cudaq.ptsbe.sample(\n",
+        "        kernel_mz, noise_model=noise_model, shots_count=N,\n",
+        "        sampling_strategy=strategy, max_trajectories=mt,\n",
+        "        return_execution_data=True,\n",
+        "    )\n",
+        "    trajs = result.ptsbe_execution_data.trajectories\n",
+        "    p_captured = sum(t.probability for t in trajs)\n",
+        "    n_traj = len(trajs)\n",
         "    f, _, _ = compute_f_noisy(p_dm, result, n)\n",
         "    traj_f.append(f)\n",
-        "    print(f\"  ptsbe (traj={mt:5d}): F_noisy = {f:.4f}\")\n",
+        "    traj_n.append(n_traj)\n",
+        "    traj_pcap.append(p_captured)\n",
+        "    print(f\"{mt:>10d}  {n_traj:>8d}  {p_captured:>10.6f}  {f:>8.4f}\")\n",
         "\n",
         "_selected_traj = None\n",
         "for mt, f in zip(traj_counts, traj_f):\n",
@@ -1229,13 +1244,7 @@
       "cell_type": "markdown",
       "id": "f07c4e6f",
       "metadata": {},
-      "source": [
-        "#### Trajectory truncation bias\n",
-        "\n",
-        "PTSBE generates a finite number of Kraus trajectories (`max_trajectories`) from an exponentially large trajectory space. The proportional shot allocation distributes all requested shots across only the selected trajectories, renormalized by their combined probability mass $P_S = \\sum_{k \\in S} p_k$. When $P_S < 1$, the selected (predominantly low-error) trajectories receive more weight than they should, making the output distribution sharper than the true density matrix. This drives $F_{\\text{noisy}} > 1$.\n",
-        "\n",
-        "The diagnostic below sweeps `max_trajectories` and reports the captured probability mass $P_S$ alongside $F_{\\text{noisy}}$, confirming the relationship."
-      ]
+      "source": []
     },
     {
       "cell_type": "code",
@@ -1265,29 +1274,7 @@
           ]
         }
       ],
-      "source": [
-        "# Diagnostic: trajectory truncation bias.\n",
-        "# When max_trajectories is much smaller than the total trajectory space,\n",
-        "# the proportional shot allocation over-weights the selected (low-error)\n",
-        "# trajectories.  Increasing max_trajectories should bring F_noisy → 1.0.\n",
-        "p_dm_ref = get_dm_diagonal(kernel_no_mz, noise_model, n, p_meas=0.01)\n",
-        "\n",
-        "print(f\"Trajectory truncation diagnostic (n={n}, depth={depth}, N={N_SHOTS:,})\\n\")\n",
-        "print(f\"{'max_traj':>10s}  {'n_traj':>8s}  {'P_captured':>10s}  {'F_noisy':>8s}\")\n",
-        "for mt in [50, 200, 500, 1000, 2000, 5000, 10000, N_SHOTS]:\n",
-        "    cudaq.set_target(PTSBE_TARGET)\n",
-        "    strategy = cudaq.ptsbe.ProbabilisticSamplingStrategy(seed=42)\n",
-        "    res = cudaq.ptsbe.sample(\n",
-        "        kernel_mz, noise_model=noise_model, shots_count=N_SHOTS,\n",
-        "        sampling_strategy=strategy, max_trajectories=mt,\n",
-        "        return_execution_data=True,\n",
-        "    )\n",
-        "    trajs = res.ptsbe_execution_data.trajectories\n",
-        "    p_captured = sum(t.probability for t in trajs)\n",
-        "    n_traj = len(trajs)\n",
-        "    f, _, _ = compute_f_noisy(p_dm_ref, res, n)\n",
-        "    print(f\"{mt:>10d}  {n_traj:>8d}  {p_captured:>10.6f}  {f:>8.4f}\")"
-      ]
+      "source": []
     }
   ],
   "metadata": {
