Add review fixes.
Signed-off-by: Thomas Alexander <talexander@nvidia.com>

--- a/docs/sphinx/examples/python/ptsbe_accuracy_verification.ipynb
+++ b/docs/sphinx/examples/python/ptsbe_accuracy_verification.ipynb
@@ -879,7 +879,8 @@
             "n= 6, depth= 8:  standard=1.0001+/-0.0022,  ptsbe=0.9984+/-0.0016\n",
             "n= 8, depth= 2:  standard=0.9988+/-0.0005,  ptsbe=1.0000+/-0.0012\n",
             "n= 8, depth= 4:  standard=0.9994+/-0.0022,  ptsbe=1.0044+/-0.0022\n",
-            "n= 8, depth= 8:  standard=1.0021+/-0.0041,  ptsbe=1.0076+/-0.0037\n"
+            "n= 8, depth= 8:  standard=1.0021+/-0.0041,  ptsbe=1.0076+/-0.0037\n",
+            "n=10, depth= 2:  standard=0.9994+/-0.0012,  ptsbe=1.0031+/-0.0025\n"
           ]
         }
       ],
@@ -1132,14 +1133,6 @@
       "cell_type": "markdown",
       "id": "65701d35",
       "metadata": {},
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "c0dda080",
-      "metadata": {},
-      "outputs": [],
       "source": []
     },
     {
