--- a/docs/sphinx/examples/python/ptsbe_end_to_end_workflow.ipynb
+++ b/docs/sphinx/examples/python/ptsbe_end_to_end_workflow.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -90,9 +90,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "PTSBE sample result:\n",
+            "{ 00:491822 01:7889 10:8035 11:492254 }\n",
+            "\n",
+            "Total shots: 1000000\n"
+          ]
+        }
+      ],
       "source": [
         "shots = 1000000\n",
         "\n",
@@ -120,9 +131,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Standard (density-matrix) sample result:\n",
+            "{ 00:491849 01:8033 10:8003 11:492115 }\n",
+            "\n",
+            "Total shots: 1000000\n"
+          ]
+        }
+      ],
       "source": [
         "result_standard = cudaq.sample(bell_with_noise, noise_model=noise, shots_count=shots)\n",
         "print(\"Standard (density-matrix) sample result:\")\n",
@@ -141,9 +163,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Execution data:\n",
+            "  Instructions: 6 total\n",
+            "    Gates: 2, Noise: 2, Measurements: 2\n",
+            "  Trajectories: 64\n",
+            "  Sum of trajectory shots: 1000000 (expected 1000000)\n",
+            "  Trace instructions (first 5):\n",
+            "    [0] type=TraceInstructionType.Gate, name=h, targets=[0]\n",
+            "    [1] type=TraceInstructionType.Noise, name=depolarization_channel, targets=[0]\n",
+            "    [2] type=TraceInstructionType.Gate, name=x, targets=[1]\n",
+            "    [3] type=TraceInstructionType.Noise, name=depolarization2, targets=[1, 0]\n",
+            "    [4] type=TraceInstructionType.Measurement, name=mz, targets=[0]\n",
+            "  Example trajectory: id=0, probability=0.921500, num_shots=921638\n",
+            "  Selected trajectory (kraus_selections):\n",
+            "    circuit_location=1, kraus_operator_index=0, is_error=False\n",
+            "    circuit_location=3, kraus_operator_index=0, is_error=False\n"
+          ]
+        }
+      ],
       "source": [
         "result_with_data = cudaq.ptsbe.sample(\n",
         "    bell_with_noise,\n",
